welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
 if (estFaceMur() == true ){
 ^SlugTracking:9: error: return outside method definition
   	{return true 						
         ^SlugTracking:11: error: return outside method definition
   else { return false 
          ^